[jdk11] Replaced Arrays.asList with List.of